Version: 1.1.3
Date: 2021.02.XX
  Changes:
    - Code revisions to support changes in Artisanal Reskins: Library, now dependent on 1.1.3
    - Removed legacy code now that Angel's Smelting 0.6.14 has released
    - Removed Sea Block slag processing compatibility patches, now natively implemented in Sea Block
  Bugfixes:
    - Added check for `recipe.normal` when processing org slag recipes to avoid a startup error condition
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2021.01.31
  Locale:
    - Added Russian localization
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2020.12.25
  Features:
    - Added icon support for pellets, sheet coils, wire coils, glass fiber, metal powders, processed ores, quartz crucible, lime, limestone, silicon wafers, slag, and solder
    - Added icon support for molten metals, glass, and concrete, thanks and credit to NeveHanter for providing icons and technologies with realistic fluid simulations
    - Added icon support for ingots, and included variations, controllable with startup setting "Item variations" (default on)
    - Added support for items and recipes added by Angel's Extended Smelting and Compression mod
    - Added support for ingots, pellets, metal powders, processed ores and molten metals, and related technologies, in Mad Clown's Processing mod
    - Implemented the flare stack, gas refinery, petrochem gas, oil and inline tanks, and valves
  Changes:
    - Moved function `vertical_pipe_shadow` into Artisanal Reskins: Library, now dependent on 1.1.1
    - Revised the advanced gas refinery sprite, improved pipe connection shadows, and adjusted flare positioning
    - Revised numeral overlays with sharper, clearer sprites for recipes touched by this mod
  Locale:
    - Updated German localizations